--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,7 +26,7 @@
   font-family: 'Bonheur Royale', cursive;
  }
 
- .content h2, h3, h6,.home_btn,  .header .search_btn  {
+ h2, h3, h6,.home_btn,  .header .search_btn  {
   font-family: 'Noto Serif JP', sans-serif; 
  }
 
