--- a/app/views/articles/line.html.erb
+++ b/app/views/articles/line.html.erb
@@ -1,47 +1,47 @@
 <div class = "content pb-4 pt-4">
-  <h2> LINE PAGE</h2>
+  <h2><%= t('.title') %></h2>
   <div class = "line mt-4">
     <p>Twitterで私物特定のツイートがされた際に、LINEでお知らせをお送りします。<br>全員の私物をお知らせするチャネルと個人のチャネルがございます。<br>ぜひご登録ください。</p>
     <div class = "container row justify-content-center">
       <div class="card line_card col-xs-12 col-md-6 col-lg-3 border-dark border-1 rounded-3 mr-5 mx-3 mt-3 mb-3" style="width: 14.5rem; height: 14.5rem;">
         <div class="card-body">
-          <h6 class = "pt-2">ST</h6>
+          <h6 class = "pt-2"><%= t('.st') %></h6>
           <%= image_tag 'line_all.jpg', size:"160x160"%>
         </div>
       </div>
       <div class="card line_card col-xs-12 col-md-6 col-lg-3 border-dark border-1 rounded-3 mx-3 mt-3 mb-3" style="width: 14.5rem; height: 14.5rem;">
         <div class="card-body">
-          <h6 class = "pt-2">KY</h6>
+          <h6 class = "pt-2"><%= t('.yugo') %></h6>
           <%= image_tag 'line_yugo.jpg', size:"160x160"%>
         </div>
       </div>
       <div class="card line_card col-xs-12 col-md-6 col-lg-3 border-dark border-1 rounded-3 mx-3 mt-3 mb-3" style="width: 14.5rem; height: 14.5rem;">
         <div class="card-body">
-          <h6 class = "pt-2">KT</h6>
+          <h6 class = "pt-2"><%= t('.taiga') %></h6>
           <%= image_tag 'line_taiga.jpg', size:"160x160"%>
         </div>
       </div>
       <div class="card line_card col-xs-12 col-md-6 col-lg-3 border-dark border-1 rounded-3 mx-3 mt-3 mb-3" style="width: 14.5rem; height: 14.5rem;">
         <div class="card-body">
-          <h6 class = "pt-2">TJ</h6>
+          <h6 class = "pt-2"><%= t('.juri') %></h6>
           <%= image_tag 'line_juri.jpg', size:"160x160"%>
         </div>
       </div>
       <div class="card line_card col-xs-12 col-md-6 col-lg-3 border-dark border-1 rounded-3 mx-3 mt-3 mb-3" style="width: 14.5rem; height: 14.5rem;">
         <div class="card-body mx-auto">
-          <h6 class = "pt-2">MH</h6>
+          <h6 class = "pt-2"><%= t('.hokuto') %></h6>
           <%= image_tag 'line_hokuto.jpg', size:"160x160"%>
         </div>
       </div>
       <div class="card line_card col-xs-12 col-md-6 col-lg-3 border-dark border-1 rounded-3 mx-3 mt-3 mb-3" style="width: 14.5rem; height: 14.5rem;">
         <div class="card-body">
-          <h6  class = "pt-2">　J　</h6>
+          <h6  class = "pt-2"><%= t('.jesse') %></h6>
           <%= image_tag 'line_jesse.jpg', size:"160x160"%>
         </div>
       </div>
       <div class="card line_card col-xs-12 col-md-6 col-lg-3 border-dark border-1 rounded-3 mx-3 mt-3 mb-3" style="width: 14.5rem; height: 14.5rem;">
         <div class="card-body">
-          <h6  class = "pt-2">SM</h6>
+          <h6  class = "pt-2"><%= t('.shintaro') %></h6>
           <%= image_tag 'line_shintarou.jpg', size:"160x160"%>
         </div>
       </div>
