--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,5 @@
 <div class = "content pb-4 pt-4">
-  <h2>ITEM PAGE</h2>
+  <h2><%= t('.title') %></h2>
   <div class = "container mt-4">
     <div class="row justify-content-center pt-2 pb-3 pt-3 pb-3 mx-auto mt-5 mb-3" style="width: 100%; height: 100%;">
       <% @articles.each do |article| %>
@@ -27,12 +27,7 @@
       <%= paginate @articles %>
       <% if @articles.count == 0 %>
         <div class = "pt-5 mt-5 pb-4 mt-4">
-        <%= "該当する記事がありません" %>
-        <%
-=begin%>
- <%= t('defaults.no_result') %> 
-<%
-=end%>
+          <%= t('defaults.no_result') %> 
         </div>
       <%end%>
     </div>
