--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,43 +12,43 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/">HOME</a>
+                  <a class="nav-link active" aria-current="page" href="/"><%= t('.home') %></h2></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/line_page">LINE</a>
+                  <a class="nav-link" href="/line_page"><%= t('.line') %></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/reports/new">REPORT</a>
+                  <a class="nav-link" href="/reports/new"><%= t('.report') %></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/articles">ITEM</a>
+                  <a class="nav-link" href="/articles"><%= t('.item') %></a>
                 </li>
                 <% if logged_in? %>
                   <li class="nav-item">
-                    <a class="nav-link" href="/admins/reports">Admins/REPORT</a>
+                    <a class="nav-link" href="/admins/reports"><%= t('.admins_report') %></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/admins/articles">Admins/ITEM</a>
+                    <a class="nav-link" href="/admins/articles"><%= t('.admins_item') %></a>
                   </li>
                   <li class="nav-item">
-                    <%= link_to t('defaults.logout'), admins_logout_path, class: "nav-link", method: :delete %>
+                    <%= link_to t('.logout'), admins_logout_path, class: "nav-link", method: :delete %>
                   </li>
                 <% end %>
               </ul>
               <% if current_page?(articles_path) %>
                 <div class = "search justify-content-center py-4">
                   <%= search_form_for @q, url: articles_path do |f| %> 
-                    <%= f.search_field :brand_cont, class: "btn search_btn btn-outline-dark rounded-3", placeholder: "Brand" %>  
-                    <%= f.search_field :members_name_cont, class: "btn search_btn btn-outline-dark rounded-3", placeholder: "Member" %> 
-                    <%= f.submit "search", class: "btn search_btn btn-outline-dark search_btn"%>
+                    <%= f.search_field :brand_cont, class: "btn search_btn btn-outline-dark rounded-3", placeholder: t("activerecord.attributes.article.brand") %>  
+                    <%= f.search_field :members_name_cont, class: "btn search_btn btn-outline-dark rounded-3", placeholder: Member.model_name.human %> 
+                    <%= f.submit t('.search'), class: "btn search_btn btn-outline-dark search_btn"%>
                   <% end %>
                 </div>
               <% elsif current_page?(search_admins_articles_path) or current_page?(admins_articles_path) %>
                 <div class = "search mx-auto py-4">
                   <%= search_form_for @q, url: search_admins_articles_path do |f| %> 
-                    <%= f.search_field :brand_cont, class: "btn btn-outline-dark rounded-3", placeholder: "Brand" %>  
-                    <%= f.search_field :members_name_cont, class: "btn btn-outline-dark rounded-3", placeholder: "Member" %> 
-                    <%= f.submit "search", class: "btn btn-outline-dark search_btn"%>
+                    <%= f.search_field :brand_cont, class: "btn btn-outline-dark rounded-3", placeholder: t("activerecord.attributes.article.brand") %> 
+                    <%= f.search_field :members_name_cont, class: "btn btn-outline-dark rounded-3", placeholder: Member.model_name.human %> 
+                    <%= f.submit t('.search'), class: "btn btn-outline-dark search_btn"%>
                   <% end %>
                 </div>
               <% end %> 
