--- a/app/views/admins/articles/edit.html.erb
+++ b/app/views/admins/articles/edit.html.erb
@@ -1,5 +1,5 @@
 <div class = "content pt-4">
-  <h2><%= t('title') %></h2>
+  <h2><%= t('.title') %></h2>
   <div class="card border-white border-1 rounded-0 bg-white text-dark pt-3 pb-3 mx-auto mt-3 mb-3" style="width: 100%; height: 100%;">
     <div class="card-body mt-3">
       <%= form_with model: @article, url: admins_article_path(@article.id), local: true do |f| %>
