--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,186 +9,191 @@
   font-family: 'Scheherazade New', serif;
 }
 
- .title h3, .logo  {
+.title h3, .logo  {
   font-family: 'Bonheur Royale', cursive;
- }
+}
 
- h2, h3, h6,.home_btn,  .header .search_btn  {
+h2, h3, h6,.home_btn,  .header .search_btn  {
   font-family: 'Noto Serif JP', sans-serif; 
- }
+}
 
 body p {
   font-family: 'Montserrat', sans-serif;
+  line-height:1.5rem;
 }
 
+body {
+  margin: 0;
+  background: white;
+  min-height:600px;
+  overflow-x: hidden;
+  color: black;
+  height: 100vh;
+}
 
- body{
-    margin: 0;
-    background: white;
-    min-height:600px;
-    color: black;
-    height: 100vh;
- }
-
-  .content{
+.content {
   min-height:550px;
   width: 100%;
   text-align: center;
   justify-content: center;
- }
+}
 
- .login-page{
+.login-page {
   min-height:550px;
   width: 100%;
- }
+}
 
+.cover {
+  background-image: image-url('top_image2.jpg');
+  width: 100%;
+  height: 0;
+  /* (画像の高さ / 画像の横幅) × 100 */
+  padding-top: 50%;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  position: relative;
+}
 
- .cover{
-   background-image: image-url('top_image2.jpg');
-   width: 100%;
-    height: 0;
-    /* (画像の高さ / 画像の横幅) × 100 */
-    padding-top: 50%;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    position: relative;
-  }
+.cover h1 {
+  position: absolute;
+  top: 13%;
+  left: 30%;
+  font-size: 8vw;
+  font-weight: bold;
+}
 
-  .cover h1{
-    position: absolute;
-    top: 17%;
-    left: 33%;
-    font-size: 9vw;
-    font-weight: bold;
-  }
+.cover h3 {
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  font-size: 2.9vw;
+}
 
-  .cover h3{
-    position: absolute;
-    top: 70%;
-    left: 50%;
-    font-size: 2.9vw;
-  }
+.introduction {
+  width: 85%;
+}
 
-  .introduction{
-    width: 85%;
-  }
+.home_btn {
+  background-color: #FCE3E7 ;
+  color: #770022;
+}
 
-  .home_btn{
-    background-color: #FCE3E7 ;
-    color: #770022;
-  }
+.mark-box {
+  position: relative;
+}
 
-  .mark-box {
-    position: relative;
-  }
+.mark-box:before {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 0;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 50px 50px 0 0;
+  border-color: #f00 transparent transparent transparent;
+}
 
-  .mark-box:before {
-    position: absolute;
-    content: "";
-    left: 0;
-    top: 0;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 50px 50px 0 0;
-    border-color: #f00 transparent transparent transparent;
-  }
-  .mark-box:after {
-    position: absolute;
-    content: "NEW";
-    transform: rotate(315deg);
-    display: block;
-    font-size: 11px;
-    white-space: pre;
-    color: #fff;
-    top: 12px;
-    left: 4px;
-    text-align: center;
-    z-index: 2;
-    line-height: 1.2;
-  }
+.mark-box:after {
+  position: absolute;
+  content: "NEW";
+  transform: rotate(315deg);
+  display: block;
+  font-size: 11px;
+  white-space: pre;
+  color: #fff;
+  top: 12px;
+  left: 4px;
+  text-align: center;
+  z-index: 2;
+  line-height: 1.2;
+}
 
+input[type="search"]:hover {
+  background-color: #FCE3E7;
+  color: #111111;
+}
 
-  input[type="search"]:hover{
-    background-color: #FCE3E7;
-    color: #111111;
-  }
-  input[type="search"]::after{
-    transition: 0.5s;
-    background-color: #FCE3E7;
-  }
+input[type="search"]::after {
+  transition: 0.5s;
+  background-color: #FCE3E7;
+}
 
-  .search_btn:hover {
-    background-color: #FCE3E7;
-    color: #111111;
-  }
+.search_btn:hover {
+  background-color: #FCE3E7;
+  color: #111111;
+}
 
-  .search_btn::after {
-    transition: 0.5s;
-    background-color: #FCE3E7;
-  }
+.search_btn::after {
+  transition: 0.5s;
+  background-color: #FCE3E7;
+}
 
+.pagination {
+  margin: 20px auto 0;
+  width: 50%;
+  display: flex;
+  justify-content: center;
+}
 
-  .pagination{
-    margin: 20px auto 0;
-    width: 50%;
-    display: flex;
-    justify-content: center;
-  }
-  .pagination>li>a {          
-    border: none;
-    color: #770022;
-  }
+.pagination>li>a {          
+  border: none;
+  color: #770022;
+}
 
-  .pagination>.active>.page-link {     
-    background-color: #FCE3E7;
-    border-radius: 30px;
-  }
+.pagination>.active>.page-link {     
+  background-color: #FCE3E7;
+  border-radius: 30px;
+}
 
-  .pagination>li>a:hover {        
-    border-radius: 30px;
-    background-color: #FCE3E7;
-    color: #770022;
-  }
+.pagination>li>a:hover {        
+  border-radius: 30px;
+  background-color: #FCE3E7;
+  color: #770022;
+}
 
-  .footer_text {
-    color: #999999;
-  }
+.footer_text {
+  color: #999999;
+}
 
 @media screen and (min-width:480px) {
   .card-text {
     font-size: 1.1rem;
   }
-  .home_btn{
+
+  .home_btn {
     width: 60%;
     line-height: 250%;
   }
+
   .btn-coler {
     background-color: #FCE3E7;
     width: 55%;
     line-height: 200%;
   }
+
   .btn-coler:hover {
     background-color: #FCE3E7;
     color: #111111;
   }
-  
-  
 }
 
 @media screen and (min-width:768px) and (max-width:1024px) {
   .card-text {
     font-size: 1.4rem;
   }
-  .home_btn{
+
+  .home_btn {
     width: 45%;
   }
+
   .btn-coler {
     background-color: #FCE3E7;
     width: 50%;
     line-height: 250%;
   }
+
   .btn-coler:hover {
     background-color: #FCE3E7;
     color: #111111;
@@ -196,18 +201,25 @@ body p {
 }
 
 @media screen and (min-width: 1024px) {
+  .cover h1 {
+    left: 40%;
+  }
+
   .card-text {
     font-size: 1.4rem;
   }
-  .home_btn{
+
+  .home_btn {
     width: 20%;
   }
+
   .btn-coler {
     background-color: #FCE3E7;
     color: #111111;
     width: 30%;
     line-height: 200%;
   }
+
   .btn-coler:hover {
     transition: 0.5s;
     background-color: #FCE3E7;
