--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,15 +4,15 @@
     <% unless current_page?(admins_login_path) %>
       <div class="header_body">
         <div class="header_btn text-end head-color">
-          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light p-4">
             <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"   aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon p-5"></span>
               </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/"><%= t('.home') %></h2></a>
+                  <a class="nav-link active" aria-current="page" href="/"><%= t('.home') %></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/line_page"><%= t('.line') %></a>
