--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -160,6 +160,7 @@ body {
   color: #999999;
 }
 
+
 @media screen and (min-width:480px) {
   body p {
     font-size: 1.8rem;
@@ -287,3 +288,6 @@ body {
   }
 
 }
+// input{
+//   -webkit-user-select : auto;
+//  }
