Improve:FB_4_search_field変更

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -113,25 +113,19 @@ body {
   line-height: 1.2;
 }
 
-// input[type="search"]:hover {
-//   background-color: #FCE3E7;
-//   color: #111111;
-// }
+.search_btn {
+  text-align: center;
+}
 
-// input[type="search"]::after {
-//   transition: 0.5s;
-//   background-color: #FCE3E7;
-// }
+.search_btn:hover {
+  background-color: #FCE3E7;
+  color: #111111;
+}
 
-// .search_btn:hover {
-//   background-color: #FCE3E7;
-//   color: #111111;
-// }
-
-// .search_btn::after {
-//   transition: 0.5s;
-//   background-color: #FCE3E7;
-// }
+.search_btn::after {
+  transition: 0.5s;
+  background-color: #FCE3E7;
+}
 
 .pagination {
   margin: 20px auto 0;
@@ -286,8 +280,4 @@ body {
   .search_btn{
     height: 2.5rem;
   }
-
 }
-// input{
-//   -webkit-user-select : auto;
-//  }
