--- a/app/views/articles/home.html.erb
+++ b/app/views/articles/home.html.erb
@@ -7,7 +7,10 @@
       </div>
     </div>
     <div class = "introduction pt-3 pb-3 mt-5 mb-5 mx-auto">
-      <p>こんにちは<br>Twitterの私物特定ツイートに付随して<br>私物が特定された際にLINEでお知らせメッセージをお送りします。<br>過去に通知をお送りした私物に関しましては一覧になっているのでご覧ください。<br>また、通知や記事の内容等に間違いがあった際はご報告フォームからコメントをお送りください。</p>
+      <p>こんにちは</p>
+      <p>私物が特定された際にLINEでお知らせをお送りします。</p>
+      <p>過去にお知らせした私物はITEMページに一覧になっております。</p>
+      <p>また、間違い等がありましたらREPORTページからお知らせください。</p>
     </div>
     <div class = "mt-2 mb-2 pt-1 pb-3">
       <%= button_to t('.line_btn'), line_page_path, method: :get, class: "btn home_btn btn-outline-light border-1 rounded-3 " %>
