--- a/app/views/articles/home.html.erb
+++ b/app/views/articles/home.html.erb
@@ -7,10 +7,10 @@
       </div>
     </div>
     <div class = "introduction pt-3 pb-3 mt-5 mb-5 mx-auto">
-      <p>こんにちは</p>
-      <p>私物が特定された際にLINEでお知らせをお送りします。</p>
-      <p>過去にお知らせした私物はITEMページに一覧になっております。</p>
-      <p>また、間違い等がありましたらREPORTページからお知らせください。</p>
+      <p class = "text_message">こんにちは</p>
+      <p class = "text_message">LINEで私物特定のお知らせをお送りします。</p>
+      <p class = "text_message">過去にお知らせした私物はITEMページをご覧ください。</p>
+      <p class = "text_message">また、間違い等がありましたらREPORTページからお知らせください。</p>
     </div>
     <div class = "mt-2 mb-2 pt-1 pb-3">
       <%= button_to t('.line_btn'), line_page_path, method: :get, class: "btn home_btn btn-outline-light border-1 rounded-3 " %>
