Improve: LINE view

--- a/app/views/articles/line.html.erb
+++ b/app/views/articles/line.html.erb
@@ -1,48 +1,12 @@
-<div class = "content pb-4 pt-4">
+<div class = "content pb-3 pt-4">
   <h1><%= t('.title') %></h1>
   <div class = "line mt-4">
-    <p class = "text_message">Twitterで私物特定のツイートがされた際に、LINEでお知らせをお送りします。<br>全員と個人のチャネルがございます。<br>ぜひご登録ください。</p>
+    <p class = "text_message pt-4">Twitterで私物特定のツイートがされた際に、LINEでお知らせをお送りします。<br>お知らせを受け取るメンバーの選択が可能です。<br>ぜひご登録ください。</p>
     <div class = "container row justify-content-center">
-      <div class="card line_card col-xs-12 col-md-6 col-lg-3 border-dark border-1 rounded-3 mr-5 mx-3 mt-3 mb-3" style="width: 14.5rem; height: 14.5rem;">
+      <div class="card line_card col-xs-12 col-md-6 col-lg-3 border-dark border-1 rounded-3 mr-5 mx-3 mt-3 mb-3" style="width: 24.5rem; height: 24.5rem;">
         <div class="card-body">
-          <h6 class = "pt-2"><%= t('.st') %></h6>
-          <%= image_tag 'line_all.jpg', size:"160x160"%>
-        </div>
-      </div>
-      <div class="card line_card col-xs-12 col-md-6 col-lg-3 border-dark border-1 rounded-3 mx-3 mt-3 mb-3" style="width: 14.5rem; height: 14.5rem;">
-        <div class="card-body">
-          <h6 class = "pt-2"><%= t('.yugo') %></h6>
-          <%= image_tag 'line_yugo.jpg', size:"160x160"%>
-        </div>
-      </div>
-      <div class="card line_card col-xs-12 col-md-6 col-lg-3 border-dark border-1 rounded-3 mx-3 mt-3 mb-3" style="width: 14.5rem; height: 14.5rem;">
-        <div class="card-body">
-          <h6 class = "pt-2"><%= t('.taiga') %></h6>
-          <%= image_tag 'line_taiga.jpg', size:"160x160"%>
-        </div>
-      </div>
-      <div class="card line_card col-xs-12 col-md-6 col-lg-3 border-dark border-1 rounded-3 mx-3 mt-3 mb-3" style="width: 14.5rem; height: 14.5rem;">
-        <div class="card-body">
-          <h6 class = "pt-2"><%= t('.juri') %></h6>
-          <%= image_tag 'line_juri.jpg', size:"160x160"%>
-        </div>
-      </div>
-      <div class="card line_card col-xs-12 col-md-6 col-lg-3 border-dark border-1 rounded-3 mx-3 mt-3 mb-3" style="width: 14.5rem; height: 14.5rem;">
-        <div class="card-body mx-auto">
-          <h6 class = "pt-2"><%= t('.hokuto') %></h6>
-          <%= image_tag 'line_hokuto.jpg', size:"160x160"%>
-        </div>
-      </div>
-      <div class="card line_card col-xs-12 col-md-6 col-lg-3 border-dark border-1 rounded-3 mx-3 mt-3 mb-3" style="width: 14.5rem; height: 14.5rem;">
-        <div class="card-body">
-          <h6  class = "pt-2"><%= t('.jesse') %></h6>
-          <%= image_tag 'line_jesse.jpg', size:"160x160"%>
-        </div>
-      </div>
-      <div class="card line_card col-xs-12 col-md-6 col-lg-3 border-dark border-1 rounded-3 mx-3 mt-3 mb-3" style="width: 14.5rem; height: 14.5rem;">
-        <div class="card-body">
-          <h6  class = "pt-2"><%= t('.shintaro') %></h6>
-          <%= image_tag 'line_shintarou.jpg', size:"160x160"%>
+          <h4 class = "pt-2"><%= t('.st') %></h4>
+          <%= image_tag 'line_all.jpg', size:"330x330"%>
         </div>
       </div>
     </div>
